--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+* {
+    margin: 0;
+    padding: 0%;
+    box-sizing: border-box;
+    list-style: none;
+    font-size: 20px;
+}
+
 body {
+    
     display: flex;
     flex-wrap: wrap;
     background-color: #e2e2e2;
     font-family: "Roboto", sans-serif;
+    
 }
   
 .header__title {
@@ -13,26 +23,35 @@ body {
     font-weight: 600;
     margin: .625rem;
     cursor: pointer;
+    
 }
   
 .header__container {
+    
+    margin: 0 auto;
     width: 100%;
     background-color: #fff;
 }
   
   .header__input--search {
-    width: 50%;
-    padding: .5rem;
+    
+    padding: 8px 50px;
     padding-left: 1.25rem;
 }
   
 .header__content {
     display: flex;
-    justify-content: space-around;
-    margin: .9375rem;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 1200px;
+    width: 80%;
+    background-color: #fff;
+    padding: 20px 0px 20px 0px;
 }
 
 .main__container {
+    
     display: flex;
     flex-direction: column;
     width: 80%;
@@ -43,6 +62,8 @@ body {
 }
 
 .form__container {
+    max-width: 1200px;
+    margin: 0 auto;
     background-color: white;
     border-radius: .3125rem;
     width: 100%;
@@ -55,6 +76,7 @@ body {
 }
 
 .form__input-container {
+    max-width: 1200px;
     display: flex;
     justify-content: space-between;
 }
@@ -97,7 +119,11 @@ h2 {
   padding-bottom: 1.25rem;
 }
 
+
+
 .tasks__container {
+    max-width: 1200px;
+    margin: 0 auto;
     background-color: white;
     padding: 1.875rem;
     border-radius: .5rem;
